fix: set projects gap to 0 and re-enable static export with refined layout

--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -1,6 +1,6 @@
 .project {
 	height: 500px;
-	width: 400px;
+	width: 100%;
 	padding: 0;
 	display: flex;
 	flex-direction: column;
