--- a/src/layouts/Hero/Hero.module.scss
+++ b/src/layouts/Hero/Hero.module.scss
@@ -21,9 +21,9 @@
 	text-transform: capitalize;
 
 	@media (min-width: 768px) {
-		font-size: 23vw;
-		line-height: 24vw;
-		letter-spacing: 1vw;
+		font-size: clamp(8vw, 15vw, 20vw);
+		line-height: 1.1;
+		letter-spacing: 0.8vw;
 	}
 }
 
