--- a/src/layouts/Projects/Projects.module.scss
+++ b/src/layouts/Projects/Projects.module.scss
@@ -36,7 +36,7 @@
 
 .horizontal_scroll_container {
 	display: flex;
-	gap: 1.5rem;
+	gap: 0;
 	overflow-x: auto;
 	overflow-y: visible;
 	padding-bottom: 2.5rem;
@@ -64,7 +64,7 @@
 	}
 
 	@media (min-width: 768px) {
-		gap: 5vw;
+		gap: 0;
 		padding-left: 5vw;
 		padding-right: 5vw;
 		scroll-padding: 0 5vw;
@@ -81,6 +81,6 @@
 	}
 
 	@media (min-width: 1024px) {
-		flex-basis: 60vw;
+		flex-basis: 45vw;
 	}
 }
